Increase kudu extension test coverage
Fixes #5698